--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -117,3 +117,10 @@
   url = {https://www.cs.cmu.edu/~guyb/papers/Ble93.pdf},
   note = {Seminal work introducing the all-prefix-sums (scan) operation and its parallel algorithms.}
 }
+@misc{modular_democratizing_ai_compute,
+  author = {Chris Lattner and Modular},
+  title = {Democratizing AI Compute},
+  year = {2025},
+  url = {https://www.modular.com/democratizing-ai-compute},
+  note = {Blog series on the vision and technical approach to democratizing AI compute.}
+}
