--- a/posts/2025-07-03-gpu-puzzles-p1.qmd
+++ b/posts/2025-07-03-gpu-puzzles-p1.qmd
@@ -21,9 +21,9 @@ categories:
 - mojo
 ---
 
-After a super-long break from writing blogs, I've decided to get back to it this year.
+Back on the blog after a long hiatus - this time, I’m shifting gears from just reviewing papers(which are available on my [GitHub](https://github.com/goodhamgupta/paper_reviews)) to diving deep into hands-on implementations.
 
-I've always been interested in systems programming, but somehow never _really_ picked it up. The rate of progress in the GenAI space has been exponential recently, with players like Google [@Google] reportedly processing 9.7 trillion tokens a month. Companies are now investing more time and resources interest in making these Large Language Modelsas fast and cheap as possible, by improving training and inference efficiency using "moar" compute.
+I've always been interested in systems programming, but somehow never _really_ picked it up. The rate of progress in the GenAI space has been exponential recently, with players like Google [@Google] reportedly processing 9.7 trillion tokens a month. Companies are now investing more time and resources interest in making these Large Language Modelsas fast and cheap as possible, by improving occasionallytraining and inference efficiency using "moar" compute.
 
 I briefly spoke about [GPU computing last year](https://www.figma.com/deck/Sq9frEEoTFgFWthOJ4EM5w/intro_gpu_cuda?node-id=1-37&t=VNzh9p2qKrHNSTJj-1), and finally decided to learn it this summer. The goal is to eventually be able to implement kernels for fast matmuls, softmax, and FlashAttention.
 
@@ -40,7 +40,7 @@ In early 2023, Modular announced Mojo🔥, a new systems-programming language pr
 - Traits and bounds checking
 - Interopeability with PTX, Python, C
 
-Modular has since announced Max, their AI inference platform, built on Mojo. The released [all kernels](https://github.com/modular/modular/tree/main/max/kernels) available as part of the platform, along with their own version[@modularpuzzles] of Sasha Rush's GPU Puzzles [@GPUPuzzles] in Mojo. IMO, their kernels were much easier to read compared to CUDA/Triton implementations. I also enjoyed the [Democratising AI Compute](https://www.modular.com/democratizing-ai-compute) series by Chris, and thus I decided to learn a bit more about how to write these kernels in Mojo.
+Modular has since announced Max, their AI inference platform, built on Mojo. The released [all kernels](https://github.com/modular/modular/tree/main/max/kernels) available as part of the platform, along with their own version[@modularpuzzles] of Sasha Rush's GPU Puzzles [@GPUPuzzles] in Mojo. IMO, their kernels were much easier to read compared to CUDA/Triton implementations. I also enjoyed the "Democratising AI Compute"[@modular_democratizing_ai_compute] series by Chris Lattner, and thus I decided to learn a bit more about how to write these kernels in Mojo.
 
 ## GPUs 101 {#gpu-memory}
 
@@ -433,8 +433,6 @@ fn add_10_blocks_2d(
 pixi run p07
 # out: HostBuffer([11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0])
 # expected: HostBuffer([11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0, 11.0])
-````
-
 ````
 
 </details>
