--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -124,3 +124,9 @@
   url = {https://www.modular.com/democratizing-ai-compute},
   note = {Blog series on the vision and technical approach to democratizing AI compute.}
 }
+@misc{wikipedia_simt,
+  author = {Wikipedia},
+  title = {Single instruction, multiple threads},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Single_instruction,_multiple_threads}},
+  note = {Wikipedia article on SIMT (Single instruction, multiple threads) architecture}
+}
