--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -130,3 +130,11 @@
   howpublished = {\url{https://en.wikipedia.org/wiki/Single_instruction,_multiple_threads}},
   note = {Wikipedia article on SIMT (Single instruction, multiple threads) architecture}
 }
+@article{dao_flashattention,
+  author = {Tri Dao and Daniel Y. Fu and Stefano Ermon and Atri Rudra and Christopher Ré},
+  title = {FlashAttention: Fast and Memory-Efficient Exact Attention with IO-Awareness},
+  journal = {arXiv preprint arXiv:2205.14135},
+  year = {2022},
+  url = {https://arxiv.org/abs/2205.14135},
+  note = {Introduces FlashAttention, an IO-aware algorithm for efficient attention computation.}
+}
