Add date and author to post

--- a/posts/2025-07-06-gpu-puzzles-p1.qmd
+++ b/posts/2025-07-06-gpu-puzzles-p1.qmd
@@ -1,5 +1,7 @@
 ---
 title: "GPUs go brrr with Mojo - Fundamentals"
+author: Shubham Gupta
+date: '2025-07-06'
 lightbox: true
 toc: true
 bibliography: citations/mojo_citations.bib
