--- a/posts/2025-07-06-gpu-puzzles-p1.qmd
+++ b/posts/2025-07-06-gpu-puzzles-p1.qmd
@@ -602,7 +602,7 @@ pixi run p08_layout_tensor
 
 </details>
 
-## Conclusion
+# Conclusion
 
 We covered simple algorithms such as map, zip using Mojo, and did some initial work with their  `LayoutTensor` abstraction, which similar to the [CuTe](https://docs.nvidia.com/cutlass/media/docs/cpp/cute/00_quickstart.html) library.
 
