--- a/posts/2025-07-03-gpu-puzzles-p2.qmd
+++ b/posts/2025-07-03-gpu-puzzles-p2.qmd
@@ -864,3 +864,54 @@ $$
 ![Axis Sum](mojo_gpu_puzzles/p13_intro.png)
 
 Each row/column is an embarrassingly-parallel reduction, so the GPU kernel just assigns one warp (or block) per slice and performs a standard shared-memory reduction inside the slice.
+
+![Row Sum](mojo_gpu_puzzles/p13_row_sum.png)
+
+<details open>
+<summary> Solution </summary>
+
+```{.mojo filename="p13.mojo"}
+fn axis_sum[
+    in_layout: Layout, out_layout: Layout
+](
+    output: LayoutTensor[mut=False, dtype, out_layout],
+    a: LayoutTensor[mut=False, dtype, in_layout],
+    size: Int,
+):
+    local_i = thread_idx.x
+    batch = block_idx.y
+    shared = tb[dtype]().row_major[TPB]().shared().alloc()
+
+    if local_i < SIZE:
+        shared[local_i] = a[batch, local_i]
+
+    barrier()
+
+    var stride = TPB // 2
+    while stride > 0:
+        if local_i < stride and local_i + stride < SIZE:
+            shared[local_i] += shared[local_i + stride]
+        barrier()
+        stride //= 2
+
+    # Use first thread to write result
+    if local_i == 0:
+        # Output shape is [batch_size, 1]
+        # which we why we need the last dimension
+        output[batch, 0] = shared[0]
+```
+
+```bash
+pixi run p13
+```
+
+</details>
+
+We can also perform column-sum(axis=0) with a trivial change:
+
+```diff
+-    if local_i < SIZE:
+-        shared[local_i] = a[batch, local_i]
++    if local_i < SIZE:
++        shared[local_i] = a[local_i, batch]
+```
