--- a/posts/citations/mojo_citations.bib
+++ b/posts/citations/mojo_citations.bib
@@ -138,3 +138,10 @@
   url = {https://arxiv.org/abs/2205.14135},
   note = {Introduces FlashAttention, an IO-aware algorithm for efficient attention computation.}
 }
+@misc{siboehm_cuda_mmm,
+  author = {Simon Boehm},
+  title = {CUDA Matrix Multiplication Madness},
+  year = {2022},
+  url = {https://siboehm.com/articles/22/CUDA-MMM},
+  note = {Blog post exploring various CUDA matrix multiplication strategies and optimizations.}
+}
